# libcppsockets

./: .clang-tidy  .gitignore  CMakeLists.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cmake-multi-platform.yml  code_scanning.yml  download-cache.yml
.github/workflows/windows-vcpkg/: action.yml
include/CppSockets/: Address.hpp  Certificate.hpp  IPv4.hpp  OSDetection.hpp  SSL_Utils.hpp  Socket.hpp  SocketInit.hpp  TlsSocket.hpp  Version.hpp.in
include/CppSockets/Tls/: Certificate.hpp  Context.hpp  Socket.hpp  Utils.hpp
include/CppSockets/internal/: SocketInit.hpp
private/CppSockets/: SslMacros.hpp
source/: Address.cpp  Certificate.cpp  IPv4.cpp  SSL_Utils.cpp  Socket.cpp  SocketInit.cpp  TlsSocket.cpp  init.cpp
source/Tls/: Certificate.cpp  Context.cpp  Socket.cpp  Utils.cpp
tests/: CMakeLists.txt  TestSockets.cpp
tests/Tls/: TestContext.cpp
